@@ -5,6 +5,7 @@ Changelog for pdoTools.
 - Fixed possibly E_NOTICE when site has no extension packages installed.
 - [#17] [pdoMenu] Added placeholder [[+wf.menutitle]].
 - [#16] [pdoMenu] Disabled status verification of specified parents.
+- [#13] [pdoMenu] Improved work with root of multiple contexts.
 
 1.8.5 pl
 ==============
